--- a/Project_adv.ipynb
+++ b/Project_adv.ipynb
@@ -11,7 +11,8 @@
     "import numpy as np\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import mean_absolute_percentage_error"
+    "from sklearn.metrics import mean_absolute_percentage_error\n",
+    "import statsmodels.api as sm"
    ]
   },
   {
